--- a/style.css
+++ b/style.css
@@ -1,184 +1,69 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-html, body {
-    height: 100%;
-    background-color: beige;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
+ }
+ 
+ body{
+    color: rgb(17, 17, 17);
     font-size: 16px;
-    line-height: 24px;
+    font-weight: normal;
+    font-family: 'Montserrat', sans-serif;
+ }
+
+ .header{
+ background: url("../img/font.jpg") transparent no-repeat center center / cover;
+ padding: 10px 30px 150px 30px;
+ 
+ }
+
+.nav{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
-h1 {
-    margin: 0px 0px 20px 0px;
-    font-size: 36px;
-    line-height: normal;
+.menu{
+    width: 600px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header__inner>h1{
+    margin-top: 150px;
+}
+
+ .btn{
+    font-family: 'Montserrat', sans-serif;
+    border: 1px solid #fff;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+
+ .header__inner{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: 20px;
+ }
+
+ .btn:hover{
+     background-color: black;
+     opacity: 0.5;
+    border: 3px solid #fff;
+    width: 150px;
+    height: 50px;
+ }
+
+hr{
+    width: 80px;
     text-align: center;
 }
 
-span {
-    font-size: 24px;
-    color: rgb(197, 197, 248) ;
-    padding: 10px 0;
-}
-
-span:hover
-li:hover {
-    font-size: 26px;
-}
-
-li {
-    padding: 15px 0;
-    color: black;
-}
-
-.wrapper {
-    min-height: 100%;
-    overflow: hidden;
-}
-
-.content {
-    max-width: 1330px;
-    margin: 0 auto;
-    padding: 50px 15px;
-}
-
-.title {
-    margin: 0px 0px 20px 0px;
-    font-size: 30px;
-    color: rgb(9, 5, 26);
-}
-
-.font,
-.animation,
-.background {
-    margin: 0px 0px 40px 0px;
-}
-
-.font__icons {
-    width: 50%;
-    margin: 0px 0px 20px 0px;
-    padding: 0 0 0 30px;
-    background-color: rgb(15, 6, 6);
-    border-radius: 20px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    transition: width 2s;
-}
-
-.font__icons:hover {
-    width: 100%;
-}
-
-.animation__block {
-    width: 100%;
-    margin: 0px 0px 20px 0px;
-    padding: 30px;
-    background-color: rgb(15, 6, 6);
-    border-radius: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.block__element {
-    background-color: #fff;
-    height: 100px;
-    width: 100px;
-    margin-right: 5px;
-    margin-left: 5px;
-    animation: skew 3s infinite;
-    transform: skew(20deg);
-    opacity: 0.7;
-}
-
-@keyframes skew {
-    0% {
-        transform: skew(20deg);
-    }
-    100% {
-        transform: skew(-20deg)
-    }
-}
-
-.background__image {
-    width: 100%;
-    height: 50vh;
-    margin: 0 0 20px 0;
-    background: url("../img/ar.jpg") transparent no-repeat center center / cover;
-}
-
-.text {
-    margin: 0px 0px 80px 0px;
-}
-
-.text__image {
-    margin: 0px 0px 20px 0px;
-    text-align: center;
-}
-
-.text__image img {
-    max-width: 100%;
-}
-
-.cards {
-    margin: 0px 0px 20px 0px;
-}
-
-.cards__row {
-    margin: 0px -15px 70px -15px;
-    display: flex;
-}
-
-.cards__column {
-    padding: 0px 15px;
-    flex: 0 1 33.333%;
-}
-
-.cards__image {
-    margin: 0px 0px 20px 0px;
-    padding: 0px 0px 58% 0px;
-    overflow: hidden;
-    position: relative;
-}
-
-.cards__image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.items__item {
-    flex: 0 0 33.333%;
-    position: relative;
-    min-height: 150px;
-}
-
-.items__image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.items__body {
-    flex: 1 1 auto;
-    padding: 0px 0px 0 30px;
-}
-
-.items__label {
-    font-size: 20px;
-    font-weight: 700;
-    display: inline;
-    margin: 0 0 20px 0;
-}
+ @media screen and (max-width: 320px){
+     
+ }
