--- a/style.css
+++ b/style.css
@@ -1,118 +1,79 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
-
-
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
- }
- 
- body{
-    color: black;
-    font-size: 16px;
-    font-weight: normal;
-    font-family: 'Poppins', sans-serif;
- }
-
- .header{
-    background: url("../pure-white-snow-surface.jpg") transparent no-repeat center center / cover;
-    padding: 10px 30px 150px 30px;
- }
-
-.nav{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
 }
 
-.menu{
-    width: 600px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.header__inner>h1{
-    margin-top: 150px;
-}
-
- .btn{
-    font-family: 'Poppins', sans-serif;
-    border: 1px solid rgb(7, 6, 6);
-    width: 150px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
- }
-
- .header__inner{
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-     padding: 20px;
- }
-
- .btn:hover{
-    opacity: 0.5;
-    background-color: coral;
-    color: black;
-    width: 150px;
-    height: 50px;
-    
- }
-
-hr{
-    width: 80px;
-    margin: 0 auto;
-}
-
- @media screen and (max-width: 320px){
-     
- }
-
-.menu-btn:hover {
-    font-size: 110%;
-}
-
-.logo {
-    font-size: 20px;
-    word-spacing: 5px;
-}
-
-h1 {
-    font-size: 170%;
-}
-
-.block__servises {
-    background: url(../hand-painted-watercolor-background-with-sky-and-clouds-shape.jpg) ;
-    padding: 10px 30px 150px 30px
-}
-
-.servises {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-h2 {
+.box {
+    width: 200px;
+    height: 90px;
+    background-color: aliceblue;
+    border: 2px solid black;
     text-align: center;
+    margin-bottom: 20px;
 }
 
-li {
-    list-style-type: none
+.box1 {
+    position: static;
+}
+
+.box2 {
+    background-color: burlywood;
+    position: relative;
+    top: 40px;
+    left: -50px;
+}
+
+.box3 {
+    background-color: darkorchid;
+    position: absolute;
+    top: 10px;
+    left: -100px;
+}
+
+.box4 {
+    background-color: khaki;
+    position: fixed;
+    top: 20px;
+    right: 150px;
+}
+
+.box5 {
+    background-color: powderblue;
+    position: sticky;
+    top: 30px;
+    right: 100px;
+}
+
+.box14 {
+    background-color: white;
+    position: absolute;
+    right: 850px;
+    width: 350px; 
+    height: 250px;
+    margin: 7px; 
+    padding: 5px; 
+    top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#circle {
+    width: 100px;
+    height: 100px;
+    -webkit-border-radius: 75px;
+    -moz-border-radius: 75px;
+    border-radius: 75px;
+    background-color: red;
+    border: red;
+    position: absolute;
 }
 
 p {
-    text-align: center;
+    position: absolute;
+    right: 975px;
+    margin: 5px; 
+    padding: 5px; 
+    top: 5px;
 }
-
-.fa-ul {
-    display: flex;
-    align-items: center;
-}
-
